# example-rs

./: Cargo.toml
src/: main.rs
