[package]
name = "example-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
sysinfo = "0.29.2"
env_logger = "0.10.0"
mongodb = "2.6.0"
serde = "1.0.179"
futures = "0.3.28"